syntax = "proto3";

package oxmon;

service MetricService {
  rpc ReportMetrics (MetricBatchProto) returns (ReportResponse);
}

message MetricDataPointProto {
  int64 timestamp_ms = 1;
  string agent_id = 2;
  string metric_name = 3;
  double value = 4;
  map<string, string> labels = 5;
}

message MetricBatchProto {
  string agent_id = 1;
  int64 timestamp_ms = 2;
  repeated MetricDataPointProto data_points = 3;
}

message ReportResponse {
  bool success = 1;
  string message = 2;
}
